--- a/package.json
+++ b/package.json
@@ -1,23 +1,35 @@
 {
   "name": "gapstars-assesment",
   "version": "1.0.0",
-  "description": "",
-  "main": "src/index.ts",
+  "description": "An application to blend and output cat images",
+  "main": "./dist/index.js",
+  "bin": {
+    "caas": "./dist/index.js"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc -p ."
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/miluckshan-j/gapstars-assessment.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Miluckshan Jalangan",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/miluckshan-j/gapstars-assessment/issues"
   },
   "homepage": "https://github.com/miluckshan-j/gapstars-assessment#readme",
   "devDependencies": {
+    "@types/minimist": "^1.2.2",
+    "@types/node": "^18.7.18",
+    "@types/sharp": "^0.31.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
+  },
+  "dependencies": {
+    "axios": "^0.27.2",
+    "minimist": "^1.2.6",
+    "sharp": "^0.31.0"
   }
 }
